@@ -910,7 +910,7 @@ supported:
 \end{tabular}
 \end{center}
 
-\noindent For example, one may write \texttt{14mm} or \texttt{21.6in}. In addition, the following letters stand, in some operations (\texttt{-scale-page}, \texttt{-scale-to-fit}, \texttt{-scale-contents}, \texttt{-shift}, \texttt{-mediabox},\\ \texttt{-cropbox}) for various page dimensions:
+\noindent For example, one may write \texttt{14mm} or \texttt{21.6in}. In addition, the following letters stand for various page dimensions:
 
 \begin{center}
 \begin{tabular}{rl}
@@ -925,7 +925,25 @@ supported:
   \texttt{CMINX} & Crop box minimum x coordinate\\
   \texttt{CMINY} & Crop box minimum y coordinate\\
   \texttt{CMAXX} & Crop box maximum x coordinate\\
-  \texttt{CMAXY} & Crop box maximum y coordinate
+  \texttt{CMAXY} & Crop box maximum y coordinate\\
+  \texttt{AW} & Art box width\\
+  \texttt{AH} & Art box height\\
+  \texttt{AMINX} & Art box minimum x coordinate\\
+  \texttt{AMINY} & Art box minimum y coordinate\\
+  \texttt{AMAXX} & Art box maximum x coordinate\\
+  \texttt{AMAXY} & Art box maximum y coordinate\\
+  \texttt{TW} & Trim box width\\
+  \texttt{TH} & Trim box height\\
+  \texttt{TMINX} & Trim box minimum x coordinate\\
+  \texttt{TMINY} & Trim box minimum y coordinate\\
+  \texttt{TMAXX} & Trim box maximum x coordinate\\
+  \texttt{TMAXY} & Trim box maximum y coordinate\\
+  \texttt{BW} & Bleed box width\\
+  \texttt{BH} & Bleed box height\\
+  \texttt{BMINX} & Bleed box minimum x coordinate\\
+  \texttt{BMINY} & Bleed box minimum y coordinate\\
+  \texttt{BMAXX} & Bleed box maximum x coordinate\\
+  \texttt{BMAXY} & Bleed box maximum y coordinate\\
 \end{tabular}
 \end{center}
 
